add link to final slide

--- a/examples/readme/slides.html
+++ b/examples/readme/slides.html
@@ -163,7 +163,7 @@
 
 <section>
     <h2>Read the source</h2>
-    <p>Download the template, read it. Look at the examples. There's no "rules".</p>
+    <p><a href="http://paulrouget.com/dzslides">Download</a> the template, read it. Look at the examples. There's no "rules".</p>
     <p><strong>It's as unlimited as the web is.</strong></p>
     <footer>by <a href="http://twitter.com/paulrouget">@paulrouget</a>.</footer>
 </section>
