--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-My GitHub Page
+<!DOCTYPE html>
+<meta charset="utf8">
+<link href='http://fonts.googleapis.com/css?family=Cantarell:regular,bold' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/css/stickytheme.css">
+<title>DZSlides</title>
+<header>
+    <a href="http://twitter.com/paulrouget" title="follow me on twitter"><img src="/assets/bigtwitter.png"></a>
+</header>
+<article>
+    <h1>DZSlides</h1>
+
+    <p>DZSlides 
+</article>
+
+
+
+<!-- Analytics -->
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-22781000-1']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+ </script>
