--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <article>
     <h1>DZSlides</h1>
 
-    <p>DZSlides 
+    <iframe class="frame" width="700" style="margin-left: -350px;" src="/dzslides/shells/controls.html#../../examples/readme/slides.html"></iframe>
 </article>
 
 
