--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <article>
     <h1>DZSlides</h1>
 
-    <iframe class="frame" width="700" style="margin-left: -350px;" src="shells/controls.html#../examples/readme/slides.html"></iframe>
+    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="shells/controls.html#../examples/readme/slides.html"></iframe>
 </article>
 
 
