--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
 <article>
     <h1>DZSlides</h1>
 
+    <p>DZSlides is a <em>one-page-template</em> to build your presentation in HTML5 and CSS3.</p>
+
     <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="shells/controls.html#../examples/readme/slides.html"></iframe>
+
+
+    <div id="meta">
+        <a onclick="window.open('http://twitter.com/share?text=[challenge] Build your infographics in HTML5 and CSS3&via=paulrouget&url=http%3A%2F%2Fpaulrouget.com%2Fe/infographicsInHTML5','','width=400,height=300,personalbar=0,toolbar=0,scrollbars=1,resizable=1'); return false;" href="http://twitter.com/share?text=[challenge] Build your infographics in HTML5 and CSS3&via=paulrouget&url=http%3A%2F%2Fpaulrouget.com%2Fe/infographicsInHTML5" id="twitter" title="tweet this" target="_blank">
+            <span>tweet&nbsp;this</span>
+            <img src="http://1.1.1.3/bmi/paulrouget.com/assets/twitter.png">
+        </a>
+
+        <a href="#comments" id="showcomments" onclick='document.getElementById("comments").className="showme";document.getElementById("disqus_script").src="http://disqus.com/forums/paulrouget/embed.js"'>show comments</a>
+    </div>
+
 </article>
 
+<!-- comments -->
+<div id="comments">
+    <h1 class="wooot">Comments</h1>
+    <div id="disqus_thread"></div><script id="disqus_script"></script>
+</div>
 
 
 <!-- Analytics -->
