--- a/examples/tmnt/slides.html
+++ b/examples/tmnt/slides.html
@@ -59,7 +59,7 @@
 <section class="aturtle">
     <h1>Michelangelo</h1>
     <img src="pics/michaelangelo.jpg">
-    <p>Easy-going and free-spirited. Michelangelo wears an orange mask and wields a pair of nunchaku. While he loves to relax, this Turtle also has an adventurous and creative side. <strong>He's stronger you!</strong></p>
+    <p>Easy-going and free-spirited. Michelangelo wears an orange mask and wields a pair of nunchaku. While he loves to relax, this Turtle also has an adventurous and creative side. <strong>He's stronger than you!</strong></p>
 </section>
 <section class="aturtle">
     <h1>Donatello</h1>
