--- a/examples/readme/slides.html
+++ b/examples/readme/slides.html
@@ -30,7 +30,7 @@
     <h2>How slides <strong>behave</strong>?</h2>
     <ul>
         <li>Transitions
-        <li>Resolution independant
+        <li>Resolution independent
     </ul>
     <span id="arrow">◰</span>
     <h2><strong>CSS3</strong> can do that.</h2>
