--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
 
     <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="shells/controls.html#../examples/readme/slides.html"></iframe>
 
+    <h2>Download</h2>
+    You can find the source code on github: <a href="https://github.com/paulrouget/dzslides">github.com/paulrouget/dzslides</a>
+    or download the archive <a href="https://github.com/paulrouget/dzslides/archives/master">here</a>
+
+    <h2>Bugs</h2>
+    You'll find some. Report them on <a href="https://github.com/paulrouget/dzslides">Github</a> please.
+
+    <h2>Share your slides!</h2>
+    Drop a comment and show me your work :) I'll be delighted to see what people can achieve with DZSlides.
+
+    <h2>Share your Shells!</h2>
+    Create new creative shells. A pull request on request should be enough.
 
     <div id="meta">
         <a onclick="window.open('http://twitter.com/share?text=[challenge] Build your infographics in HTML5 and CSS3&via=paulrouget&url=http%3A%2F%2Fpaulrouget.com%2Fe/infographicsInHTML5','','width=400,height=300,personalbar=0,toolbar=0,scrollbars=1,resizable=1'); return false;" href="http://twitter.com/share?text=[challenge] Build your infographics in HTML5 and CSS3&via=paulrouget&url=http%3A%2F%2Fpaulrouget.com%2Fe/infographicsInHTML5" id="twitter" title="tweet this" target="_blank">
             <span>tweet&nbsp;this</span>
             <img src="http://paulrouget.com/assets/twitter.png">
         </a>
-
         <a href="#comments" id="showcomments" onclick='document.getElementById("comments").className="showme";document.getElementById("disqus_script").src="http://disqus.com/forums/paulrouget/embed.js"'>show comments</a>
     </div>
 
