--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <p>DZSlides is a <em>one-page-template</em> to build your presentation in HTML5 and CSS3.</p>
 
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="shells/controls.html#../examples/readme/slides.html"></iframe>
-
     <h2>Download</h2>
-    You can find the source code on github: <a href="https://github.com/paulrouget/dzslides">github.com/paulrouget/dzslides</a>
-    or download the archive <a href="https://github.com/paulrouget/dzslides/archives/master">here</a>
+    You can find the source code on github <a href="https://github.com/paulrouget/dzslides">github.com/paulrouget/dzslides</a>
+    and download the archive <a href="https://github.com/paulrouget/dzslides/archives/master">here</a>
+
+    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="shells/controls.html#../examples/readme/slides.html"></iframe>
 
     <h2>Bugs</h2>
     You'll find some. Report them on <a href="https://github.com/paulrouget/dzslides">Github</a> please.
@@ -25,7 +25,7 @@
     Drop a comment and show me your work :) I'll be delighted to see what people can achieve with DZSlides.
 
     <h2>Share your Shells!</h2>
-    Create new creative shells. A pull request on request should be enough.
+    Create new creative shells. A pull request on github should be enough.
 
     <div id="meta">
         <a onclick="window.open('http://twitter.com/share?text=[challenge] Build your infographics in HTML5 and CSS3&via=paulrouget&url=http%3A%2F%2Fpaulrouget.com%2Fe/infographicsInHTML5','','width=400,height=300,personalbar=0,toolbar=0,scrollbars=1,resizable=1'); return false;" href="http://twitter.com/share?text=[challenge] Build your infographics in HTML5 and CSS3&via=paulrouget&url=http%3A%2F%2Fpaulrouget.com%2Fe/infographicsInHTML5" id="twitter" title="tweet this" target="_blank">
