--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <h2>Download</h2>
     You can find the source code on github <a href="https://github.com/paulrouget/dzslides">github.com/paulrouget/dzslides</a>
-    and download the archive <a href="https://github.com/paulrouget/dzslides/archives/master">here</a>
+    and download the archive <a href="https://github.com/paulrouget/dzslides/archives/master">here</a>.
 
     <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="shells/controls.html#../examples/readme/slides.html"></iframe>
 
