--- a/examples/readme/slides.html
+++ b/examples/readme/slides.html
@@ -254,7 +254,7 @@
 </style>
 
 
-<!-- {{{{ *************************  CORE  ********************************* -->
+<!-- {{{{ *****************  DZSlides CORE 2.0b1 *************************** -->
 <!-- *********************************************************************** -->
 <!-- *********************************************************************** -->
 <!-- *********************************************************************** -->
