--- a/examples/tmnt/slides.html
+++ b/examples/tmnt/slides.html
@@ -10,10 +10,16 @@
     <h2>Why you should fear them</h2>
     <img src="pics/a.jpg">
     <footer>by <a href="http://twitter.com/paulrouget">@paulrouget</a></footer>
+    <details>
+        Cowabunga!
+    </details>
 </section>
 
 <section class="chapter">
     <h1>What are they?</h1>
+    <details>
+        Let's define what these monsters look like.
+    </details>
 </section>
 
 <section>
@@ -33,7 +39,9 @@
     <h1><strong>1.80m</strong>tall turtles with weapons!!!</h1>
     <img src="pics/c.jpg">
     <img src="pics/g.png">
-
+    <details>
+        Show on stage how big they are!
+    </details>
 </section>
 
 <section class="imgleft">
