--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
     </div>
 
     <h2>Demos</h2>
-    <a href="http://paulrouget.com/e/dzslides2beta/">See this blog post</a>.
+    A  couple of demos.
+
+    <h3>Screencast</h3>
+    <iframe class="frame" width="560" height="349" style="margin-left: -280px" src="http://www.youtube.com/embed/YEbwGoL-fTI" frameborder="0" allowfullscreen></iframe>
+
+    <h3>Why you should fear the Ninja Turtles.</h3>
+    <iframe class="frame" src="http://paulrouget.com/dzslides/shells/controls.html#../examples/tmnt/slides.html" width="700" height="600" style="margin-left: -350px;" ></iframe>
+
+    <h3>HTML5 in the wild</h3>
+    <iframe class="frame" src="http://paulrouget.com/dzslides/shells/controls.html#../examples/html5inthewild/slides.html" width="700" height="600" style="margin-left: -350px;" ></iframe>
+
 
 </article>
 
