--- a/examples/html5inthewild/slides.html
+++ b/examples/html5inthewild/slides.html
@@ -491,14 +491,13 @@
   section > * { position: absolute; }
 
   mark {
-    position: fixed;
+    position: absolute;
     top: 250px; left: 0;
     display: block;
     height: 100px;
     width: 100px;
     background-color: black;
     color: white;
-    overflow: hidden;
     text-align: center;
     font-size: 90px;
   }
