Type: s/"si present"/"is present"

--- a/examples/readme/slides.html
+++ b/examples/readme/slides.html
@@ -361,7 +361,7 @@
   }
 
   /* If a Video is present in this new slide, play it.
-     If a Video si present in the previous slide, stop it. */
+     If a Video is present in the previous slide, stop it. */
 
   function toggleContent() {
     var s = document.querySelector("section[aria-selected]");
