--- a/examples/html5inthewild/slides.html
+++ b/examples/html5inthewild/slides.html
@@ -617,6 +617,8 @@
     width: 800px; height: 600px;
     margin-left: -400px; margin-top: -300px;
     position: absolute; top: 50%; left: 50%;
+  }
+  html {
     overflow: hidden;
   }
   section {
