remove most of the examples (useless) and fixed a typo in readme/slides.html

--- a/example/slides.html
+++ b/example/slides.html
@@ -183,7 +183,7 @@
       font-size: 2em;
       background: #1C1C1C;
       background-image: -moz-radial-gradient(center 45deg, #333 0%, #1C1C1C 50%);
-      background-image: -moz-radial-gradient(center 45deg, #333 0%, #1C1C1C 50%);
+      background-image: -webkit-radial-gradient(center 45deg, #333 0%, #1C1C1C 50%);
   }
 
 
