remove transition in Opera. overflow:hidden on body and html

--- a/template.html
+++ b/template.html
@@ -58,7 +58,6 @@
   section {
       -moz-transition: left 400ms linear 0s;
       -webkit-transition: left 400ms linear 0s;
-      -o-transition: left 400ms linear 0s;
       -ms-transition: left 400ms linear 0s;
       transition: left 400ms linear 0s;
   }
@@ -88,6 +87,7 @@
     width: 800px; height: 600px;
     margin-left: -400px; margin-top: -300px;
     position: absolute; top: 50%; left: 50%;
+    overflow: hidden;
   }
   html {
     overflow: hidden;
