--- a/shells/embedder.html
+++ b/shells/embedder.html
@@ -153,13 +153,13 @@
 <h1 id="title">...</h1>
 <iframe></iframe>
 <div id="controls">
-  <button id="back" onclick="back()">
+  <button title="prev" id="back" onclick="back()">
     <svg width="15px" height="15px" viewBox="0 0 50 50"><path d="M46.686,2.632L23.694,25.624l22.992,22.993H27.183L4.189,25.624 L27.183,2.632H46.686z"/></svg>
   </button>
-  <button id="forward" onclick="forward()">
+  <button title="next" id="forward" onclick="forward()">
     <svg width="15px" height="15px" viewBox="0 0 50 50"><path d="M46.686,2.632L23.694,25.624l22.992,22.993H27.183L4.189,25.624 L27.183,2.632H46.686z"/></svg>
   </button>
   <p id="rightcontrols"><input onchange="setSlide(this.value)" size="2" id="slideidx" value="0"></input>/<span id="slidecount">...</span>
-  <button id="popup" onclick="popup()"><svg width="15px" height="15px" viewBox="0 0 50 50"><path d="M10,0L10,40L50,40L50,0z M0,5L5,5L5,45L45,45L45,50L0,50Z"/></svg></button>
+  <button title="Open in a new window" id="popup" onclick="popup()"><svg width="15px" height="15px" viewBox="0 0 50 50"><path d="M10,0L10,40L50,40L50,0z M0,5L5,5L5,45L45,45L45,50L0,50Z"/></svg></button>
   </p>
 </div>
