--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     You can find the source code on github <a href="https://github.com/paulrouget/dzslides">github.com/paulrouget/dzslides</a>
     and download the archive <a href="https://github.com/paulrouget/dzslides/archives/master">here</a>.
 
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/controls.html#dzslides_introduction.html"></iframe>
+    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#dzslides_introduction.html"></iframe>
 
     <h2>Bugs</h2>
     You'll find some. Report them on <a href="https://github.com/paulrouget/dzslides">Github</a> please.
@@ -36,14 +36,14 @@
     <iframe class="frame" width="560" height="349" style="margin-left: -280px" src="http://www.youtube.com/embed/YEbwGoL-fTI" frameborder="0" allowfullscreen></iframe>
 
     <h3>Why you should fear the Ninja Turtles.</h3>
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/controls.html#tmnt/slides.html"></iframe>
+    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#tmnt/slides.html"></iframe>
 
     <h3>HTML5 in the wild</h3>
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/controls.html#html5inthewild/slides.html"></iframe>
+    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#html5inthewild/slides.html"></iframe>
 
 </article>
 
-<a href="http://github.com/paulrouget/dzslides"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://d3nwyuy0nl342s.cloudfront.net/img/c641758e06304bc53ae7f633269018169e7e5851/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
+<a href="http://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
 
 <!-- Analytics -->
 <script type="text/javascript">
