--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     You can find the source code on github <a href="https://github.com/paulrouget/dzslides">github.com/paulrouget/dzslides</a>
     and download the archive <a href="https://github.com/paulrouget/dzslides/archives/master">here</a>.
 
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#dzslides_introduction.html"></iframe>
+    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#dzslides-introduction.html"></iframe>
 
     <h2>Bugs</h2>
     You'll find some. Report them on <a href="https://github.com/paulrouget/dzslides">Github</a> please.
