--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
     <h2>Bugs</h2>
     You'll find some. Report them on <a href="https://github.com/paulrouget/dzslides">Github</a> please.
 
-    <h2>Share your slides!</h2>
-    Drop a comment and show me your work :) I'll be delighted to see what people can achieve with DZSlides.
-
     <h2>Share your Shells!</h2>
     Create new creative shells. A pull request on github should be enough.
-
 
     <h2>Demos</h2>
 
@@ -43,7 +39,7 @@
 
 </article>
 
-<a href="http://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
+<a href="http://github.com/paulrouget/dzslides"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
 
 <!-- Analytics -->
 <script type="text/javascript">
