Add fallback link to the iframes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     You can find the source code on github <a href="https://github.com/paulrouget/dzslides">github.com/paulrouget/dzslides</a>
     and download the archive <a href="https://github.com/paulrouget/dzslides/archives/master">here</a>.
 
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#dzslides-introduction.html"></iframe>
+    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#dzslides-introduction.html">
+      <a href="/slides/dzslides-introduction.html">link to the presentation</a>
+    </iframe>
 
     <h2>Bugs</h2>
     You'll find some. Report them on <a href="https://github.com/paulrouget/dzslides">Github</a> please.
@@ -32,10 +34,15 @@
     <iframe class="frame" width="560" height="349" style="margin-left: -280px" src="http://www.youtube.com/embed/YEbwGoL-fTI" frameborder="0" allowfullscreen></iframe>
 
     <h3>Why you should fear the Ninja Turtles.</h3>
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#tmnt/slides.html"></iframe>
+
+    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#tmnt/slides.html">
+      <a href="/slides/tmnt/slides.html">link to the presentation</a>
+    </iframe>
 
     <h3>HTML5 in the wild</h3>
-    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#html5inthewild/slides.html"></iframe>
+    <iframe class="frame" width="700" height="600" style="margin-left: -350px;" src="/slides/embedder.html#html5inthewild/slides.html">
+      <a href="/slides/html5inthewild/slides.html">link to the presentation</a>
+    </iframe>
 
 </article>
 
