--- a/shells/embedder.html
+++ b/shells/embedder.html
@@ -8,7 +8,7 @@
   function getURL() {
     var u = window.location.hash.split("#")[1];
     if (!u) {
-      u= "<style>body{background-color:white;color:blacl}</style>";
+      u= "<style>body{background-color:white;color:black}</style>";
       u+= "<strong>ERROR:</strong> No URL specified.<br>"
       u+= "Try<em>: " + document.location + "#yourslides.html</em>"
       u= "data:text/html," + encodeURIComponent(u);
