--- a/shells/onstage.html
+++ b/shells/onstage.html
@@ -68,6 +68,7 @@
       }
     }
   }
+
   function back() {views.present.postMessage("back", "*"); }
   function forward() {views.present.postMessage("forward", "*"); }
   function setSlide(i) {views.present.postMessage("setSlide(" + i + ")", "*"); }
@@ -76,7 +77,8 @@
     views.present.postMessage("toggleContent", "*");
     views.remote.postMessage("toggleContent", "*");
   }
-  function onkeydown(e) {
+
+  window.onkeydown = function(e) {
     // Don't intercept keyboard shortcuts
     if (e.altKey || e.ctrlKey || e.metaKey || e.shiftKey) {
       return;
