--- a/shells/onstage.html
+++ b/shells/onstage.html
@@ -69,9 +69,9 @@
     }
   }
 
-  function back() {views.present.postMessage("back", "*"); }
-  function forward() {views.present.postMessage("forward", "*"); }
-  function setSlide(i) {views.present.postMessage("setSlide(" + i + ")", "*"); }
+  function back() {views.present.postMessage("back", "*");views.remote.postMessage("back", "*"); }
+  function forward() {views.present.postMessage("forward", "*");views.remote.postMessage("forward", "*"); }
+  function setSlide(i) {views.present.postMessage("setSlide(" + i + ")", "*");}
 
   function toggleContent() {
     views.present.postMessage("toggleContent", "*");
