--- a/template.html
+++ b/template.html
@@ -17,6 +17,16 @@
 </section>
 
 <section>
+    <h3>Incremental ?</h3>
+    <ul class="incremental">
+      <li>Because
+      <li>we
+      <li class="incremental-skip"><span>c</span><span>a</span><span>n</span>
+    </ul>
+    <h3>It works<span class="incremental-one"> !!!</span></h3>
+</section>
+
+<section>
     <h3>No, bar!</h3>
     <ul>
         <li>Text
@@ -68,6 +78,7 @@
   section[aria-selected] { left: 0; }
   /* After */
   section[aria-selected] ~ section { left: +150% }
+  .incremental :not(.incremented), .incremental-one:not(.incremented){visibility: hidden;}
 </style>
 
 
@@ -245,14 +256,32 @@
   /* Slide controls */
 
   function back() {
+    if (decrement()) return;
     if (idx == 1) return;
     idx--;
     setSlide();
   }
   function forward() {
+    if (increment()) return;
     if (idx >= slides.length) return;
     idx++;
     setSlide();
+  }
+  function increment() {
+    var elts = slides[idx-1].querySelectorAll('.incremental :not(.incremented), .incremental-one:not(.incremented)');
+    if (elts.length) {
+      elts[0].classList.add('incremented');
+      if (elts[0].classList.contains('incremental-skip')) increment();
+    }
+    return elts.length;
+  }
+  function decrement() {
+    var elts = slides[idx-1].querySelectorAll('.incremented');
+    if (elts.length) {
+      elts[elts.length-1].classList.remove('incremented');
+      if (elts.length >= 2 && elts[elts.length-2].classList.contains('incremental-skip')) decrement();
+    }
+    return elts.length;
   }
   function setSlide() {
     var old = document.querySelector("section[aria-selected]");
@@ -277,7 +306,7 @@
     }
     window.location.hash = idx;
     for (var i = 0; i < friendWindows.length; i++) {
-        friendWindows[i].postMessage(JSON.stringify({method: "newslide", details: getDetails(idx), idx: idx}), "*");
+        friendWindows[i].postMessage(JSON.stringify({method: "newslide", details: getDetails(idx), idx: idx }), "*");
     }
   }
 </script>
